resolved mobile responsivesness issues with dropdown nav bar

--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -1,7 +1,3 @@
-customer-selector {
-
-}
-
 .menu-titles {
   font-weight: 600;
   letter-spacing: 1px;
@@ -34,4 +30,15 @@ customer-selector {
 
 .option-tag:hover {
   background-color: #f4f1ea;
+}
+
+@media only screen and (max-width: 767px) {
+  .option-tag-box {
+    min-width: 8em;
+    width: 100%;
+  }
+  .option-tag {
+    min-width: 10em;
+    width: 100%;
+  }
 }
